Version 0.9.11b
===============

Released ????? ??, ????

- Added Japanese holidays for new Emperor (kokinamura)
- Fixed Australian Canberra day holiday (explodingdinosaurs, dr-p)
- Added support for Estonian holidays (RaulVS14)
- Added support for Iceland and Kenya (justinasfour04)
- Added support for Aruba (orson1282)

Version 0.9.10
==============

Released March 12, 2019

- Added Lithuanian holidays support (GiedriusMauza)
- Added Luxembourgish holidays (theFeverDog)
- Added Russian holidays (mshinkareva)
- Added Bulgarian holidays (pavelsof)
- Holidays in date range (elln2)
- German holidays updates (MrtnBckr, alexanderschulze)
- South African holidays updates (nickyspag)
- Australian holidays updates (itssimon)

Version 0.9.9
=============

Released January 3, 2019

- Magic numbers removal (elln2, dr-p)
- Honduras support (Oscar Romero)
- Brazil's holidays fixes (victorpluna)
- Added provinces and holidays in Italy (krolmic, dr-p)
- Fixed regression with German Easter and Pentecost holidays (vlt, Achimh3011)
- Fixed Canada Holiday Calendar (justinasfour04)
- Fixed Columbus Day in Arkansas - US (johanneshk)
- Added Grand Final Day in Victoria - AU (isha1111)
- Added Palm Sunday to Danish holidays (jmkjaer)
- South Africa's holidays fixes (Gordonei)

Version 0.9.8
=============

Released October 18, 2018

- Added Ukraine (Anian-igor)
- Added Croatia (fran1987)
- Added Brazil (fcrespo82)

Version 0.9.7
=============

Released September 12, 2018

- Added prov/state parameters to CountryHoliday() (luto)
- Added Python 3.7 compatibility (required dateutil >= 2.7.0)
- Fixed German Reformationstag (adaitche, Rosi2143), various other holiday updates
- Added Belarus (Gennady-Andreyev)

Version 0.9.6
=============

Released August 1, 2018

- Added India (Shaurya Uppal)
- Fixed Canadian holidays (Canada / Dominion Day)
- Fixed German holidays (Buß- und Bettag, Ostern, Pfingsten)

Version 0.9.5
=============

Released April 23, 2018

- Added Hungary (Peter Zsak)